删除运行目录，清空持久化文件，只保留副本在本地，github上面没必要保存

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
          # rabbitmq 日志目录
         - RABBITMQ_LOG_BASE=/var/logs/rabbitmq_base_log
          # 配置文件
-        # - RABBITMQ_CONFIG_FILE=/etc/rabbitmq/rabbitmq
+        - RABBITMQ_CONFIG_FILE=/etc/rabbitmq/rabbitmq
 
       volumes:
         # 项目上层路径
