--- a/supervisor/conf.d/supervisord_dist_node_main.conf
+++ b/supervisor/conf.d/supervisord_dist_node_main.conf
@@ -23,6 +23,7 @@ stdout_logfile=/var/logs/supervisor_%(program_name)s_stdout.log
 command=/tmp/wait-for-it.sh localhost:5672 -- /tmp/rabbitmq_base_disk_node_host_ext.sh
 stderr_logfile=/var/logs/supervisor_%(program_name)s_stderr.log
 stdout_logfile=/var/logs/supervisor_%(program_name)s_stdout.log
+autorestart=false
 #stdout_logfile_maxbytes=50MB
 #stderr_logfile_maxbytes=50MB
 #stdout_logfile_backups=60
