删除运行目录，清空持久化文件，只保留副本在本地，github上面没必要保存

--- a/config/advanced.conf
+++ b/config/advanced.conf
@@ -16,7 +16,6 @@
   %%
   %% See https://www.rabbitmq.com/shovel.html for details
   %% ----------------------------------------------------------------------------
-
   {rabbitmq_shovel,
     [{shovels,
       [%% A named shovel worker.
@@ -102,5 +101,15 @@
     %% Set queries to determine which tags a user has
     %%
     %% {tag_queries, []}
-  ]}
+  ]},
+
+ %% 关于 仲裁队列的配置
+  {rabbit, [
+		%% 关于 仲裁队列的配置，设置奇数的仲裁节点，这些节点负责做镜像 
+  		{quorum_cluster_size, 3},
+  		%% 这是与流控制相关的参数，用于定义通道在进入流之前接受的未确认消息的最大数量
+    	{quorum_commands_soft_limit, 512}
+    ]
+  },
+
 ].
