--- a/supervisor/conf.d/supervisord_ram_2_node_main.conf
+++ b/supervisor/conf.d/supervisord_ram_2_node_main.conf
@@ -19,11 +19,11 @@ stdout_logfile=/var/logs/supervisor_%(program_name)s_stdout.log
 #stdout_logfile_backups=60
 #stderr_logfile_backups=60
 
-[program:rabbitmq_ram_2_ext]
-command=/tmp/wait-for-it.sh localhost:5672 -- /tmp/rabbitmq_ram_2_node_host_ext.sh
-stderr_logfile=/var/logs/supervisor_%(program_name)s_stderr.log
-stdout_logfile=/var/logs/supervisor_%(program_name)s_stdout.log
-autorestart=false
+#[program:rabbitmq_ram_2_ext]
+#command=/tmp/wait-for-it.sh localhost:5672 -- /tmp/rabbitmq_ram_2_node_host_ext.sh
+#stderr_logfile=/var/logs/supervisor_%(program_name)s_stderr.log
+#stdout_logfile=/var/logs/supervisor_%(program_name)s_stdout.log
+#autorestart=false
 #stdout_logfile_maxbytes=50MB
 #stderr_logfile_maxbytes=50MB
 #stdout_logfile_backups=60
