--- a/config/rabbitmq.conf
+++ b/config/rabbitmq.conf
@@ -411,7 +411,7 @@ cluster_partition_handling = ignore
 ## up syncing but total batch size in bytes must not exceed 2 GiB.
 ## Available in RabbitMQ 3.6.0 or later.
 ## 每次镜像队列同步数据的大小
-mirroring_sync_batch_size = 4096
+##mirroring_sync_batch_size = 4096
 
 ## Make clustering happen *automatically* at startup. Only applied
 ## to nodes that have just been reset or started for the first time.
