--- a/config/rabbitmq_ram_2_node/advanced.config
+++ b/config/rabbitmq_ram_2_node/advanced.config
@@ -108,8 +108,9 @@
 		%% 关于 仲裁队列的配置，设置奇数的仲裁节点，这些节点负责做镜像 
   		{quorum_cluster_size, 3},
   		%% 这是与流控制相关的参数，用于定义通道在进入流之前接受的未确认消息的最大数量
-    	{quorum_commands_soft_limit, 512}
+    	{quorum_commands_soft_limit, 512},
+      {tcp_listeners, [5674]}
     ]
-  },
+  }
 
 ].
