--- a/config/rabbitmq_ram_1_node/rabbitmq.conf
+++ b/config/rabbitmq_ram_1_node/rabbitmq.conf
@@ -13,7 +13,7 @@
 ## By default, RabbitMQ will listen on all interfaces, using
 ## the standard (reserved) AMQP 0-9-1 and 1.0 port.
 ## 客户端对接端口
-listeners.tcp.default = 5672
+listeners.tcp.default = 5673
 
 
 ## To listen on a specific interface, provide an IP address with port.
@@ -595,7 +595,7 @@ net_ticktime = 60
 ## HTTP listener and embedded Web server settings.
 # ## See https://rabbitmq.com/management.html for details.
 #
-# management.tcp.port = 15672
+management.tcp.port = 15673
 # management.tcp.ip   = 0.0.0.0
 #
 # management.tcp.shutdown_timeout   = 7000
@@ -1026,3 +1026,6 @@ log.file.level = info
 ## {tag_queries, []}
 #   ]},
 # -----------------------------
+
+# 普鲁米修斯监控端口
+#prometheus.ssl.port=15693
