--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,6 +65,40 @@ services:
       command: /tmp/wait-for-it.sh 127.0.0.1:15672 -- /tmp/supervisord_ram_1_node_main.sh
       #启动之后请手动运行 /tmp/rabbitmq_ram_1_node_host_ext.sh
 
+
+    rabbitmq_dist_2_node:
+      build: ./
+      # 这个主机作为内存节点
+      hostname: rabbitmq_dist_2_node_host
+      container_name: rabbitmq_dist_2_node_container
+      restart: always
+
+      # 配置依赖项 必须在第一个容器启动之后再启动，如果依赖容器没有启动，则先启动依赖容器
+      ports:
+       - "15674:1567"   # web管理端口
+       - "5674:5674"   #客户端连接的网络接口
+       - "25674:25674"   #Erlang分发服务器端口
+      environment:
+        # 配置文件
+       - RABBITMQ_CONFIG_FILE=/etc/rabbitmq/rabbitmq
+       - RABBITMQ_ADVANCED_CONFIG_FILE=/etc/rabbitmq/advanced
+       - RABBITMQ_CONF_ENV_FILE=/etc/rabbitmq/rabbitmq-env.conf
+       # 确保这两个容器有先后启动顺序
+      volumes:
+       # 项目上层路径
+       # - ../:/apps
+       # superiored 日志存放路径
+       - ./logs/rabbitmq_dist_2_node:/var/logs
+       # 持久化路径 $RABBITMQ_MNESIA_DIR
+       - ./data/rabbitmq_dist_2_node:/var/lib/rabbitmq/mnesia
+       # 配置文件
+       - ./config/rabbitmq_dist_2_node/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
+       - ./config/rabbitmq_dist_2_node/advanced.config:/etc/rabbitmq/advanced.config
+       # env 配置文件
+       - ./config/rabbitmq_dist_2_node/rabbitmq-env.conf:/etc/rabbitmq/rabbitmq-env.conf
+      command: /tmp/wait-for-it.sh 127.0.0.1:15672 -- /tmp/supervisord_dist_2_node_main.sh
+      #启动之后请手动运行 /tmp/rabbitmq_ram_1_node_host_ext.sh
+
     # rabbitmq_ram_2_node:
     #   build: ./
     #   # 这个主机也作为内存节点
