--- a/config/rabbitmq_ram_1_node/rabbitmq-env.conf
+++ b/config/rabbitmq_ram_1_node/rabbitmq-env.conf
@@ -1,16 +1,16 @@
 NODE_PORT=5673
 
 # 集群通信cookie 集群通信的标识
-NODENAME=rabbit@rabbitmq_ram_1_node
+NODENAME=rabbitmq_ram_1_node
 # 设置数据持久化目录
 MNESIA_BASE=/var/lib/rabbitmq/mnesia/
-MNESIA_DIR=/var/lib/rabbitmq/mnesia/rabbit@rabbitmq_ram_1_node
+MNESIA_DIR=/var/lib/rabbitmq/mnesia/rabbitmq_ram_1_node
 # 设置默认home位置，这个配置没有被列出来，可能以后升级版本之后会改变，如果出错考虑注释一下此行
 HOME=/opt/rabbitmq
 # 设置插件的保存路径
 PLUGINS_DIR=/opt/rabbitmq/plugins
 # 插件的解压目录
-PLUGINS_EXPAND_DIR=/var/lib/rabbitmq/mnesia/rabbit@rabbitmq_ram_1_node-plugins-expand
+PLUGINS_EXPAND_DIR=/var/lib/rabbitmq/mnesia/rabbitmq_ram_1_node-plugins-expand
 # console_log 控制台日志输出目录
 CONSOLE_LOG=/var/logs/rabbitmq_console_log
 # rabbitmq 日志目录
