--- a/config/rabbitmq_ram_1_node/rabbitmq.conf
+++ b/config/rabbitmq_ram_1_node/rabbitmq.conf
@@ -404,7 +404,7 @@ cluster_partition_handling = ignore
 # cluster_partition_handling.pause_if_all_down.recover = ignore
 
 ## Node names to check
-# cluster_partition_handling.pause_if_all_down.nodes.1 = rabbit@localhost
+# cluster_partition_handling.pause_if_all_down.nodes.1 = localhost
 # cluster_partition_handling.pause_if_all_down.nodes.2 = hare@localhost
 
 ## Mirror sync batch size, in messages. Increasing this will speed
