删除运行目录，清空持久化文件，只保留副本在本地，github上面没必要保存

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,10 @@ services:
       # 这个主机作为磁盘节点
       hostname: rabbitmq_base_disk_node_host
       container_name: rabbitmq_disk_node_container
+      extra_hosts:
+        - "rabbitmq_base_disk_node_host:139.224.132.234"
+        - "rabbitmq_ram_1_node_host:139.224.132.234"
+        - "rabbitmq_dist_2_node:104.224.139.179"
       restart: always
       ports:
         - "15672:15672"   # web管理端口
@@ -38,6 +42,10 @@ services:
       hostname: rabbitmq_ram_1_node_host
       container_name: rabbitmq_ram_1_node_container
       restart: always
+      extra_hosts:
+        - "rabbitmq_base_disk_node_host:139.224.132.234"
+        - "rabbitmq_ram_1_node_host:139.224.132.234"
+        - "rabbitmq_dist_2_node:104.224.139.179"
 
       # 配置依赖项 必须在第一个容器启动之后再启动，如果依赖容器没有启动，则先启动依赖容器
       ports:
@@ -65,7 +73,7 @@ services:
       command: /tmp/wait-for-it.sh 127.0.0.1:15672 -- /tmp/supervisord_ram_1_node_main.sh
       #启动之后请手动运行 /tmp/rabbitmq_ram_1_node_host_ext.sh
 
-#
+
 #    rabbitmq_dist_2_node:
 #      build: ./
 #      # 这个主机作为内存节点
@@ -73,7 +81,9 @@ services:
 #      container_name: rabbitmq_dist_2_node_container
 #      restart: always
 #      extra_hosts:
-#       - "rabbitmq_disk_node:139.224.132.234"
+#        - "rabbitmq_base_disk_node_host:139.224.132.234"
+#        - "rabbitmq_ram_1_node_host:139.224.132.234"
+#        - "rabbitmq_dist_2_node:104.224.139.179"
 #
 #      # 配置依赖项 必须在第一个容器启动之后再启动，如果依赖容器没有启动，则先启动依赖容器
 #      ports:
