--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,7 @@ services:
       restart: always
       extra_hosts:
         - "rabbitmq_dist_2_node:104.224.139.179"
+        - "rabbitmq_base_disk_node_host:139.224.132.234"
 
       # 配置依赖项 必须在第一个容器启动之后再启动，如果依赖容器没有启动，则先启动依赖容器
       ports:
@@ -78,7 +79,6 @@ services:
 #      restart: always
 #      extra_hosts:
 #        - "rabbitmq_base_disk_node_host:139.224.132.234"
-#        - "rabbitmq_ram_1_node_host:139.224.132.234"
 #
 #      # 配置依赖项 必须在第一个容器启动之后再启动，如果依赖容器没有启动，则先启动依赖容器
 #      ports:
