删除运行目录，清空持久化文件，只保留副本在本地，github上面没必要保存

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,6 +79,7 @@ services:
       restart: always
       extra_hosts:
         - "rabbitmq_base_disk_node_host:139.224.132.234"
+        - "rabbitmq_ram_1_node_host:139.224.132.234"
 
       # 配置依赖项 必须在第一个容器启动之后再启动，如果依赖容器没有启动，则先启动依赖容器
       ports:
