--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,10 @@ services:
       hostname: rabbitmq_base_disk_node_host
       container_name: rabbitmq_disk_node_container
       extra_hosts:
-        - "rabbitmq_dist_2_node:104.224.139.179"
+        - "rabbitmq_base_disk_node_host:139.224.132.234"
         - "rabbitmq_ram_1_node_host:139.224.132.234"
+        - "rabbitmq_dist_2_node_host:104.224.139.179"
+
       restart: always
       ports:
         - "15672:15672"   # web管理端口
@@ -42,15 +44,15 @@ services:
       container_name: rabbitmq_ram_1_node_container
       restart: always
       extra_hosts:
-        - "rabbitmq_dist_2_node:104.224.139.179"
         - "rabbitmq_base_disk_node_host:139.224.132.234"
+        - "rabbitmq_ram_1_node_host:139.224.132.234"
+        - "rabbitmq_dist_2_node_host:104.224.139.179"
 
       # 配置依赖项 必须在第一个容器启动之后再启动，如果依赖容器没有启动，则先启动依赖容器
       ports:
        - "15673:15673"   # web管理端口
        - "5673:5673"   #客户端连接的网络接口
        - "25673:25673"   #Erlang分发服务器端口
-       - "4368:4368"   #epmd守护进程
       environment:
         # 配置文件
        - RABBITMQ_CONFIG_FILE=/etc/rabbitmq/rabbitmq
@@ -82,12 +84,14 @@ services:
 #      extra_hosts:
 #        - "rabbitmq_base_disk_node_host:139.224.132.234"
 #        - "rabbitmq_ram_1_node_host:139.224.132.234"
+#        - "rabbitmq_dist_2_node_host:104.224.139.179"
 #
 #      # 配置依赖项 必须在第一个容器启动之后再启动，如果依赖容器没有启动，则先启动依赖容器
 #      ports:
 #       - "15674:15674"   # web管理端口
 #       - "5674:5674"   #客户端连接的网络接口
 #       - "25674:25674"   #Erlang分发服务器端口
+#       - "4369:4369"    #epmd守护进程
 #      environment:
 #        # 配置文件
 #       - RABBITMQ_CONFIG_FILE=/etc/rabbitmq/rabbitmq
