--- a/config/rabbitmq_dist_2_node/rabbitmq.conf
+++ b/config/rabbitmq_dist_2_node/rabbitmq.conf
@@ -595,7 +595,7 @@ net_ticktime = 60
 ## HTTP listener and embedded Web server settings.
 # ## See https://rabbitmq.com/management.html for details.
 #
-# management.tcp.port = 15674
+management.tcp.port = 15674
 # management.tcp.ip   = 0.0.0.0
 #
 # management.tcp.shutdown_timeout   = 7000
