--- a/config/rabbitmq_disk_node/rabbitmq.conf
+++ b/config/rabbitmq_disk_node/rabbitmq.conf
@@ -250,8 +250,8 @@ default_permissions.write = .*
 default_user_tags.administrator = true
 
 ## Define other tags like this:
-# default_user_tags.management = true
-# default_user_tags.custom_tag = true
+default_user_tags.management = true
+default_user_tags.custom_tag = true
 
 ##
 ## Additional network and protocol related configuration
